--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 <body>
     <div id="audio" hidden>
         <div id="composition" hidden>Играет: <span id="plays-now"></span></div>
+         <audio id="audioPlayer" controls>
+        <source src="path_to_your_audio_file.mp3" type="audio/mpeg">
+    </audio>
         <br>
         <div id="media-control">
             <span onclick="back()" class="media-button">⏪</span>
