--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="audio" hidden>
         <div id="composition" hidden>Играет: <span id="plays-now"></span></div>
          <audio id="audioPlayer" controls>
-        <source src="path_to_your_audio_file.mp3" type="audio/mpeg">
+        <source src="https://d6.hotplayer.ru/downloadm/92b690a4a2fe6c7d953da979b45825df/622244479_456239237/eca2627f3f42-f4f03f2d2c22-3ba13edb0f2/Jamik%20-%20%D0%90%D0%B2%D1%82%D0%BE%D1%80%D0%B8%D1%82%D0%B5%D1%82%D1%8B%20%28Remix%29.mp3" type="audio/mpeg">
     </audio>
         <br>
         <div id="media-control">
