--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+    <div id="buttonContainer"></div>
+
     <div id="audio" hidden>
         <div id="composition" hidden>Играет: <span id="plays-now"></span></div>
          <audio id="audioPlayer" controls>
